Use HTTPS for downloads

--- a/native-build/makefile
+++ b/native-build/makefile
@@ -78,7 +78,7 @@ endif
 endif
 endif
 endif
-SDK_URL=http://www.hyperion-entertainment.biz/index.php?option=com_registration&amp;view=download&amp;format=raw&amp;file=$(SDK_URL_FILE)
+SDK_URL=https://www.hyperion-entertainment.biz/index.php?option=com_registration&amp;view=download&amp;format=raw&amp;file=$(SDK_URL_FILE)
 
 # Native tools
 COREUTILS_SRC_DIR=../coreutils/repo
@@ -151,9 +151,9 @@ ifneq ($(SDK_LOC),)
 else
 	wget "$(SDK_URL)" -O downloads/SDK_$(SDK_VERSION).lha
 endif
-	cd downloads && wget -N http://ftp.gnu.org/gnu/gmp/$(GMP_ARCHIVE)
-	cd downloads && wget -N http://ftp.gnu.org/gnu/mpfr/$(MPFR_ARCHIVE)
-	cd downloads && wget -N http://ftp.gnu.org/gnu/mpc/$(MPC_ARCHIVE)
+	cd downloads && wget -N https://ftp.gnu.org/gnu/gmp/$(GMP_ARCHIVE)
+	cd downloads && wget -N https://ftp.gnu.org/gnu/mpfr/$(MPFR_ARCHIVE)
+	cd downloads && wget -N https://ftp.gnu.org/gnu/mpc/$(MPC_ARCHIVE)
 	touch $@
 
 #
